<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/twenty"
    android:paddingTop="@dimen/fifty"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/datePickerButton"
            android:textSize="@dimen/twelve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datePick" />

        <EditText
            android:id="@+id/datetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="BirthDate"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/occupationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Occupation"
        android:ems="10"
        android:inputType="text"
        android:textSize="@dimen/twintysp"
        />
    <EditText
        android:id="@+id/mainDescription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seventy"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Description"
        android:inputType="textMultiLine"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />




    <Button
        android:id="@+id/regester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/one2zero"
        android:text="@string/Registor" />


</LinearLayout>
</ScrollView>