...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/lightbrown"
    tools:context=".SecondActivity"
    >
    <TextView
        android:id="@+id/profileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="@dimen/forty"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginTop="@dimen/twofive"
        android:background="#888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age" />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twofive"
        android:text="desc"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
...
