<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Profile" />
    <item
        android:id="@+id/nav_matches"
        android:icon="@drawable/ic_heart_24"
        android:title="Match" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Setting" />
</menu>