...
    <string name="password">Enter Password </string>
    <string name="email">Enter Email </string>
    <string name="Registor">Registor </string>
    <string name="name">Enter Name </string>
    <string name="back">Go back </string>
    <string name="datePick">Pick a Date </string>
    <string name="me">Taddesse, Abenezer 4/12/2021 </string>
    <string name="profile">Your Profile </string>
    <string name="matchtitle">Your Matches</string>
    <string name="settings">SETTINGS</string>
    <string name="reminder_title">Set Match Reminder Time (24hrs)</string>
    <string name="setingtime">Time</string>
    <string name="max_distance">Set Max Distance (mi)</string>
    <string name="max_dest_hint">Ex.5</string>
    <string name="max_age_v">Set Max Age</string>
...
